# notebooks

./: README.md  first_order.ipynb  first_order.py  monge_ampere.ipynb  monge_ampere.py  pyproject.toml  setup.cfg  update_notebook.sh  update_notebooks.sh
notebooks_lib/: reflector.py
